--- a/main.html
+++ b/main.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
-<meta charset="utf-08">
     <head>
+        <meta charset="utf-08">
         <title>
-            Help for LEAGUE of LEGENDS 
+            Help for LEAGUE of LEGENDS!!!!!!!
+        
         </title>
         <style>
 
         </style>
     </head>
     <body>
-   
+        sadddddddddddddd
     </body>
     <footer>
-
+        asdddddddddddddddddddd
     </footer>
 </html>
