--- a/main.html
+++ b/main.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-08">
         <title>
-            Help for LEAGUE of LEGENDS!!!!!!!
-        
+           Help For Games
         </title>
         <style>
-
+            .margin{
+            margin: 0px;
+            }
         </style>
     </head>
-    <body>
-        sadddddddddddddd
+    <body class="margin">
+        <h1 class="margin" style="width: 100%; border-bottom: 5px solid; padding-left: 20px; padding-bottom: 5px;">Help For Games</h1>
     </body>
     <footer>
-        asdddddddddddddddddddd
+        
     </footer>
 </html>
